<resources>
    <string name="app_name">Weathernaut</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_button_descrp">Search Button</string>
    <string name="setting_button_descrp">Setting button</string>
    <string name="now">now</string>
    <string name="dummyCity">London,</string>
    <string name="dummyCountry">England</string>
    <string name="dummyDate">Sat, Jan 01</string>
    <string name="weather_icon_descrp">Weather Icon</string>
    <string name="dummyWeather">00</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="dummyWeatherType">Rainy</string>
    <string name="atmospheric_pressure">Atmospheric pressure</string>
    <string name="dummyAtmosphericPressure">0atm</string>
    <string name="wind">Wind</string>
    <string name="dummyWindSpeed">0km/h</string>
    <string name="humidity">Humidity</string>
    <string name="dummyHumiditySize">0%</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_7_days">Next 7 Days</string>
    <string name="settings">Settings</string>
    <string name="back_button">Back Button</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="unit">Units</string>
    <string name="temperature_units">Temperature units</string>
    <string name="wind_speed_units">Wind speed units</string>
    <string name="atmospheric_pressure_unit">Atmospheric pressure units</string>
    <string name="other_settings">Other Settings</string>
    <string name="sound_effects">Sound effects</string>
    <string name="about_weathernaut">About Weathernaut</string>
    <string name="feedback">Feedback</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sound_effect_descp">Accompany weather changes by sound effects</string>
    <string name="cancel">Cancel</string>
    <string name="beaufort_scale">Beaufort Scale</string>
    <string name="centimeters">Centimeters</string>
    <string name="atm">atm</string>
    <string name="kilometers_per_hour">Kilometers per hour</string>
    <string name="meters_per_second">Meters per second</string>
    <string name="miles_per_hour">Miles per hour</string>
    <string name="millimeters">Millimeters</string>
    <string name="inches">Inches</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="tomorrow_weather_icon">Tomorrow Weather Icon</string>
    <string name="tomorrow_rainfall_size">Tomorrow RainFall Size</string>
    <string name="tomorrow_wind_speed">Tomorrow Wind Speed</string>
    <string name="tomorrow_humidity">Tomorrow Humidity</string>
    <string name="day_1_weather_icon">Day 1 Weather Icon</string>
    <string name="day_2_weather_icon">Day 2 Weather Icon</string>
    <string name="day_3_weather_icon">Day 3 Weather Icon</string>
    <string name="day_4_weather_icon">Day 4 Weather Icon</string>
    <string name="day_5_weather_icon">Day 5 Weather Icon</string>
    <string name="day_6_weather_icon">Day 6 Weather Icon</string>
    <string name="add_remove_button">Add/Remove Button</string>
    <string name="city_already_added">Added</string>
    <string name="no_results">No results</string>
    <string name="search_your_city">Search your city</string>
    <string name="searching">Searching…</string>
    <string name="click_search">Press search button</string>
    <string name="locate_me">Locate me</string>
</resources>