<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/_30sdp">

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummyCity"
        android:fontFamily="@font/inter"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cityAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummyCountry"
        android:fontFamily="@font/inter"
        android:textSize="@dimen/_9ssp"
        android:textColor="#7A7A7B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityName" />

    <ImageButton
        android:id="@+id/addRemoveCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_add"
        app:tint="@color/defaultColor"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/cityName"
        app:layout_constraintBottom_toBottomOf="@id/cityAddress"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_remove_button" />

</androidx.constraintlayout.widget.ConstraintLayout>