<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.HomeFragment"
    android:scrollbarSize="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp">

        <ImageButton
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_search"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/weatherCardIndicator"
            app:layout_constraintBottom_toBottomOf="@id/weatherCardIndicator"
            android:contentDescription="@string/search_button_descrp" />

        <View
            android:id="@+id/weatherCardIndicator"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/search"
            app:layout_constraintEnd_toEndOf="@id/settings" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_menu"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/weatherCardIndicator"
            app:layout_constraintBottom_toBottomOf="@id/weatherCardIndicator"
            android:contentDescription="@string/setting_button_descrp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weatherCard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintTop_toBottomOf="@id/weatherCardIndicator">

            <LinearLayout
                android:id="@+id/locationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/cityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/dummyCity"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_34ssp" />

                <TextView
                    android:id="@+id/countryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/dummyCountry"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_24ssp" />

            </LinearLayout>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/dummyDate"
                android:textColor="#9A938C"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="@id/locationView"
                app:layout_constraintTop_toBottomOf="@id/locationView" />


            <ImageView
                android:id="@+id/weatherIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_weather_sun_rain_cloud"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/weatherNumericView"
                app:layout_constraintTop_toBottomOf="@id/date"
                android:contentDescription="@string/weather_icon_descrp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/weatherNumericView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/weatherIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/weatherIcon"
                app:layout_constraintTop_toTopOf="@+id/weatherIcon">

                <TextView
                    android:id="@+id/weatherNumericValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/dummyWeather"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_48ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/weatherUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_light"
                    android:text="@string/celsius"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toEndOf="@id/weatherNumericValue"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/weatherType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/dummyWeatherType"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="@+id/weatherNumericView"
                app:layout_constraintStart_toStartOf="@+id/weatherNumericView"
                app:layout_constraintTop_toBottomOf="@+id/weatherNumericView" />


            <LinearLayout
                android:id="@+id/weatherDataLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/weatherIcon">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/weather_data_row_style"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:drawableStartCompat="@drawable/icon_atmospheric_pressure"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/atmospheric_pressure"
                        android:textColor="@color/textColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/atmosphericPressureValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/dummyAtmosphericPressure"
                        android:textColor="@color/textColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_15sdp"
                    android:background="@drawable/weather_data_row_style"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:drawableStartCompat="@drawable/icon_wind"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/wind"
                        android:textColor="@color/textColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/windValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/dummyWindSpeed"
                        android:textColor="@color/textColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/weather_data_row_style"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:drawableStartCompat="@drawable/icon_drop"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/humidity"
                        android:textColor="@color/textColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/dropValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/dummyHumiditySize"
                        android:textColor="@color/textColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textColor="@color/textColor"
            android:fontFamily="@font/inter_bold"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/weatherCard"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tomorrow"
            android:textColor="#D6996B"
            android:fontFamily="@font/inter"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintStart_toEndOf="@id/today"
            app:layout_constraintTop_toTopOf="@id/today"
            app:layout_constraintBottom_toBottomOf="@id/today"/>

        <TextView
            android:id="@+id/next7days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableEndCompat="@drawable/icon_right_arrow"
            app:drawableTint="#4B4B4B"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/next_7_days"
            android:textColor="#4B4B4B"
            android:fontFamily="@font/inter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tomorrow"
            app:layout_constraintBottom_toBottomOf="@id/tomorrow" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#E2A272"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/today"/>

        <View
            android:id="@+id/indicator"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_5sdp"
            android:background="@drawable/indicator_dot_style"
            app:layout_constraintStart_toStartOf="@id/today"
            app:layout_constraintEnd_toEndOf="@id/today"
            app:layout_constraintTop_toTopOf="@id/separator"
            app:layout_constraintBottom_toBottomOf="@id/separator"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/smallWeatherCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/weather_time_card_layout"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>